# repositoriotest

./: README.md  auth.py  clientes.db  database.py  main.py  pyproject.toml
routes/: clientes.py  users.py
